--- a/Safety.html
+++ b/Safety.html
@@ -23,7 +23,7 @@
         <div class="header-banner">
             <div class="logo-container">
                 <a href="index.html">
-                <img class="logo" src="Images/logo-colour.png">
+                <img class="logo" src="Images/logo-colour.png" alt="CanMar logo">
                 </a>
             </div>
             <div class="navbar-container">
@@ -58,7 +58,7 @@
     </header>
     </div>
 
-    <div class="esgBanner"><img src="Images/Safety/Flagger.jpg"> <div class="esgOverlay"> <h2>Health & Safety</h2></div></div>
+    <div class="esgBanner"><img src="Images/Safety/Flagger.jpg" alt="Flagger backing up truck"> <div class="esgOverlay"> <h2>Health & Safety</h2></div></div>
 
     <div class="content-space"></div>
 
@@ -74,7 +74,7 @@
 
 </div>
 
-<div class="cor slide-up"><img class="cor" src="Images/logo-COR.jpg"></div>
+<div class="cor slide-up"><img class="cor" src="Images/logo-COR.jpg" alt="COR Logo"></div>
 
 
 <div class="content-space"></div>
@@ -90,7 +90,7 @@
 
 </div>
 
-<div class="safetyLoc slide-up"><div><img class="LocImg" src="Images/Logos/LOC-2.jpg"></div><div><img class="LocImg" src="Images/Safety/LOCpic.jpg"></div></div>
+<div class="safetyLoc slide-up"><div><img class="LocImg" src="Images/Logos/LOC-2.jpg"></div><div><img class="LocImg" src="Images/Safety/LOCpic.jpg" alt="League of Champions Logo"></div></div>
 
 
     <div class="content-space"></div>
@@ -99,7 +99,7 @@
     
     <div class="safety-grid slide-up">
 
-            <div><img class="safety-img" src="Images/New Photos/worker tool.png"></div>
+            <div><img class="safety-img" src="Images/New Photos/worker tool.png" alt="Worker in PPE holding a tool"></div>
             <div class="safety-intro"><h2 style="font-weight:bold;">Our Guiding Safety Principles</h2><ul>
                 <li>CanMar is committed to maintaining a strong safety culture, minimizing injuries, and protecting and maintaining the total well-being of each employee as well as the health and safety of the communities we work in</li>
                 <li>Safety is the core of our corporate culture; it's not just a program</li>
@@ -182,10 +182,10 @@
 
 
         <div class="slide-up strip">
-           <img class="safety-strip" src="Images/Safety/140 Elm Green Chipping.png">  
-           <img class="safety-strip" src="Images/Safety/40 Elm Shoring.png">  
-           <img class="safety-strip" src="Images/Safety/worker.png">  
-
+            <a href="https://www.instagram.com/canmar_contracting/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank" rel="noopener noreferrer"><img src="Images/instagram.webp" alt="instagram icon"></a>
+            <a href="https://www.facebook.com/profile.php?id=100093069589695" target="_blank" rel="noopener noreferrer"><img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px" alt="facebook icon"></a>
+            <a href="https://www.linkedin.com/company/canmar-contracting-limited/" target="_blank" rel="noopener noreferrer"><img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px" alt="linkedin icon"></a>
+    
         </div>
 
 
@@ -225,9 +225,9 @@
 
     <div class="grid-item-4">
         <div class="social-icons">
-        <img src="Images/instagram.webp">
-        <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px">
-        <img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px">
+        <img src="Images/instagram.webp" alt="Instagram icon">
+        <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px" alt="facebook icon">
+        <img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px" alt="linkedin icon">
 
 
     </div>
