--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="header-banner">
             <div class="logo-container">
                 <a href="index.html">
-                <img class="logo" src="Images/logo-colour.png">
+                <img class="logo" src="Images/logo-colour.png" alt="CanMar Logo">
                 </a>
             </div>
             <div class="navbar-container">
@@ -68,7 +68,7 @@
         <video autoplay muted loop id="myVideo">
           <source src="Video/final.mp4" type="video/mp4">
          </video>
-         <img id="myImage" src="Images/New Photos/140 Elm - skidsteer.png" alt="Mobile Image">
+         <img id="myImage" src="Images/New Photos/140 Elm - skidsteer.png" alt="Image of skidsteer equipment in an active parking garage project">
            
         <!--<img class="header-img" src="Images/New Photos/140 Elm - skidsteer.png" >-->
     </div>
@@ -98,41 +98,41 @@
 
     <div class="home-container">
         <div class="item slide-up">
-          <img src="Images/New Photos/mini loader.png" alt="Image">
+          <img src="Images/New Photos/mini loader.png" alt="Image of construction equipment">
           <div class="text">
-            <p class="home-intro">We are a general contracting company with a focus on structural rehabilitation based in Toronto, Ontario. We provide high quality services for commercial and residential properties in both  the public and private sectors.</p>
+            <p class="home-intro">We are a general contracting company with a focus on building envelope and structural rehabilitation based in Toronto, Ontario with an Atlantic Canada office in Eastern Passage, Nova Scotia. We provide high quality services for commercial and residential properties in both the public and private sectors.</p>
           </div>
         </div>
         <div class="item slide-up">
-            <img src="Images/Office/CanMar_office02.jpg" alt="Image">
+            <img src="Images/Office/CanMar_office02.jpg" alt="Image of CanMar's staff">
 
           <div class="text">
             <h2 class="home-text">Our Mission</h2>
-            <p class="home-text">Our mission is to ensure that all projects are planned and executed safely on time, on budget, and with a high level of quality control. Through an empowered team of experienced, motivated employees, striving to exceed our clients’ expectations we lead the construction process. 
-              We are committed to ensuring that we deliver on quality projects that restore building integrity and provide added value to our Clients.
+            <p class="home-text"> 
+              Our mission is to provide the safe, timely, and cost-effective planning and execution of all projects while maintaining a stringent level of quality control. By fostering a dedicated and skilled workforce, we aim to surpass our clients' expectations and take the lead in the construction process. We are committed to delivering superior projects that enhance building integrity and bring added value to our clients.
                 </p> 
           </div>
         </div>
         <div class="item slide-up">
-          <img src="Images/Office/CanMar_office03.jpg" alt="Image">
+          <img src="Images/Office/CanMar_office03.jpg" alt="Image of CanMar's staff">
           <div class="text">
             <h2 class="home-text">Our Vision</h2>
-            <p class="home-text">Our vision is to be a dynamic construction services company by fostering rewarding careers for our employees, providing reliable quality and exceptional service to our customers while constantly pursuing excellence. 
+            <p class="home-text">Our vision is to become a dynamic company in the construction services industry by creating fulfilling career opportunities for our employees. We are committed to delivering reliable quality and exceptional service to our customers, while consistently striving for excellence in all that we do. 
              </p> 
           </div>
         </div>
         <div class="item slide-up">
-            <img src="Images/Office/CanMar_office11.jpg" alt="Image">
+            <img src="Images/Office/CanMar_office11.jpg" alt="Image of CanMar's staff">
 
           <div class="text">
             <h2 class="home-text">Our Core Values</h2>
-            <p class="home-text">   These are our values that we live by:</p>
+            <p class="home-text">These values form the foundation of our organization:</p>
             <ul>
-                <li>Safety - Zero accidents through best practices</li>
-                <li>Quality - Continuous measurements and improvement</li>
-                <li>Integrity - Ethical, honest, consistent, highly regarded</li>
-                <li>Sustainability - balancing people, planet, and profit</li>
-                <li>Success - Client and employee satisfaction</li>
+                <li>Safety - Ensuring zero accidents through the implementation of best practices.</li>
+                <li>Quality - Continuously measuring and improving our standards.</li>
+                <li>Integrity - Upholding ethical and honest conduct, maintaining consistency, and earning a respected reputation.</li>
+                <li>Sustainability - Striving for a balanced approach that considers the well-being of people, the planet, and profitability.</li>
+                <li>Success - Fostering satisfaction among both our clients and employees.</li>
             </ul>
           </div>
         </div>
@@ -167,9 +167,9 @@
 
     <div class="grid-item-4">
         <div class="social-icons">
-        <img src="Images/instagram.webp">
-        <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px">
-        <img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px">
+        <a href="https://www.instagram.com/canmar_contracting/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank" rel="noopener noreferrer"><img src="Images/instagram.webp" alt="instagram icon"></a>
+        <a href="https://www.facebook.com/profile.php?id=100093069589695" target="_blank" rel="noopener noreferrer"><img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px" alt="facebook icon"></a>
+        <a href="https://www.linkedin.com/company/canmar-contracting-limited/" target="_blank" rel="noopener noreferrer"><img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px" alt="linkedin icon"></a>
 
 
     </div>
