--- a/Contact.html
+++ b/Contact.html
@@ -24,7 +24,7 @@
         <div class="header-banner">
             <div class="logo-container">
                 <a href="index.html">
-                <img class="logo" src="Images/logo-colour.png">
+                <img class="logo" src="Images/logo-colour.png" alt="CanMar Logo">
                 </a>
             </div>
             <div class="navbar-container">
@@ -92,10 +92,10 @@
             <div class="flex-row">
               <div class="col-left"><p class="contact-text bold">Social Media</p></div>
               <div class="col-right">        <div class="social-icons-contact">
-                <img src="Images/instagram.webp">
-                <img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px">
-                <img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px">
-        
+                <a href="https://www.instagram.com/canmar_contracting/?igshid=MzRlODBiNWFlZA%3D%3D" target="_blank" rel="noopener noreferrer"><img src="Images/instagram.webp" alt="instagram icon"></a>
+                <a href="https://www.facebook.com/profile.php?id=100093069589695" target="_blank" rel="noopener noreferrer"><img src="Images/734399_facebook_media_online_social_icon.png" style="height: 61px; width: 61px; padding-left: 10px" alt="facebook icon"></a>
+                <a href="https://www.linkedin.com/company/canmar-contracting-limited/" target="_blank" rel="noopener noreferrer"><img src="Images/linkedin-4-512.png" style="height: 61px; width: 61px; padding-left: 10px" alt="linkedin icon"></a>
+                
             </div>
         </div>
             </div>
@@ -106,7 +106,7 @@
 
        <!--  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2884.7189507631733!2d-79.5867847244663!3d43.695605989476114!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x882b3b177c8d68cf%3A0x164c1398a4e2d633!2sCan%20Mar%20Contracting%20Limited!5e0!3m2!1sen!2sca!4v1681865288712!5m2!1sen!2sca&styles=%5B%7B%22featureType%22%3A%22poi.business%22%2C%22elementType%22%3A%22labels%22%2C%22stylers%22%3A%5B%7B%22visibility%22%3A%22off%22%7D%5D%7D%5D
         " width="525" height="525" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  -->
-        <div class="contact-right"><img class="contact-image" src="Images/Office/Desk.jpg"></div>
+        <div class="contact-right"><img class="contact-image" src="Images/Office/Desk.jpg" alt="CanMar employee at a desk looking at his computer monitors"></div>
     </div>
     <div class="content-space contact-end"></div>
 
